Complete ending lecture 232

--- a/Race to the Top/Main.iPad.storyboard
+++ b/Race to the Top/Main.iPad.storyboard
@@ -30,6 +30,9 @@
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <outlet property="pathView" destination="2qp-BC-KQj" id="fOl-xe-xPn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="11k-CK-NGx" sceneMemberID="firstResponder"/>
             </objects>
